package Caso_de_estudio_Clase_4_tarjetas_credito_debito;

import java.util.List;

public class Banco {
    private List<Servicio> servicios;

    public Banco(List<Servicio> servicios) {
        this.servicios = servicios;
    }
}
